[package]
name = "loggs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A simple opinionated logger for Windows and Linux applications"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"